tikz2graphml/grammar/TikzParser.py
# Generated from tikz2graphml/grammar/Tikz.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class TikzParser ( Parser ):

    grammarFileName = "Tikz.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'--'", "'['", "']'", "'/.'", "'style'", 
                     "'{'", "'}'", "'\\begin{tikzpicture}'", "'\\end{tikzpicture}'", 
                     "'\\node'", "'\\draw'", "'at'", "'and'", "'every'", 
                     "'('", "')'", "'='", "','", "':'", "';'", "'\\pause'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BEGINTIKZPICTURE", "ENDTIKZPICTURE", "NODE", "DRAW", 
                      "AT", "AND", "EVERY", "OPEN_PARANTHESES", "CLOSE_PARANTHESES", 
                      "EQUAL_TO", "COMMA", "COLON", "SEMICOLON", "PAUSE", 
                      "LABEL_VARIABLE", "EXPRESSION", "VARIABLE", "COMMENT", 
                      "WS" ]

    RULE_begin = 0
    RULE_instructions = 1
    RULE_draw = 2
    RULE_radius = 3
    RULE_nodeList = 4
    RULE_edgeNode = 5
    RULE_edgeProperties = 6
    RULE_node = 7
    RULE_nodeId = 8
    RULE_allGlobalProperties = 9
    RULE_globalProperties = 10
    RULE_nodeProperties = 11
    RULE_properties = 12
    RULE_individualProperty = 13
    RULE_coordinates = 14
    RULE_label = 15

    ruleNames =  [ "begin", "instructions", "draw", "radius", "nodeList", 
                   "edgeNode", "edgeProperties", "node", "nodeId", "allGlobalProperties", 
                   "globalProperties", "nodeProperties", "properties", "individualProperty", 
                   "coordinates", "label" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    BEGINTIKZPICTURE=8
    ENDTIKZPICTURE=9
    NODE=10
    DRAW=11
    AT=12
    AND=13
    EVERY=14
    OPEN_PARANTHESES=15
    CLOSE_PARANTHESES=16
    EQUAL_TO=17
    COMMA=18
    COLON=19
    SEMICOLON=20
    PAUSE=21
    LABEL_VARIABLE=22
    EXPRESSION=23
    VARIABLE=24
    COMMENT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BeginContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGINTIKZPICTURE(self):
            return self.getToken(TikzParser.BEGINTIKZPICTURE, 0)

        def allGlobalProperties(self):
            return self.getTypedRuleContext(TikzParser.AllGlobalPropertiesContext,0)


        def ENDTIKZPICTURE(self):
            return self.getToken(TikzParser.ENDTIKZPICTURE, 0)

        def EOF(self):
            return self.getToken(TikzParser.EOF, 0)

        def instructions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.InstructionsContext)
            else:
                return self.getTypedRuleContext(TikzParser.InstructionsContext,i)


        def getRuleIndex(self):
            return TikzParser.RULE_begin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBegin" ):
                listener.enterBegin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBegin" ):
                listener.exitBegin(self)




    def begin(self):

        localctx = TikzParser.BeginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_begin)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(TikzParser.BEGINTIKZPICTURE)
            self.state = 33
            self.allGlobalProperties()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TikzParser.NODE or _la==TikzParser.DRAW:
                self.state = 34
                self.instructions()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(TikzParser.ENDTIKZPICTURE)
            self.state = 41
            self.match(TikzParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def node(self):
            return self.getTypedRuleContext(TikzParser.NodeContext,0)


        def instructions(self):
            return self.getTypedRuleContext(TikzParser.InstructionsContext,0)


        def draw(self):
            return self.getTypedRuleContext(TikzParser.DrawContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_instructions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstructions" ):
                listener.enterInstructions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstructions" ):
                listener.exitInstructions(self)




    def instructions(self):

        localctx = TikzParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instructions)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.node()
                self.state = 44
                self.instructions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.draw()
                self.state = 47
                self.instructions()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.draw()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.node()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DrawContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRAW(self):
            return self.getToken(TikzParser.DRAW, 0)

        def edgeProperties(self):
            return self.getTypedRuleContext(TikzParser.EdgePropertiesContext,0)


        def nodeList(self):
            return self.getTypedRuleContext(TikzParser.NodeListContext,0)


        def SEMICOLON(self):
            return self.getToken(TikzParser.SEMICOLON, 0)

        def coordinates(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.CoordinatesContext)
            else:
                return self.getTypedRuleContext(TikzParser.CoordinatesContext,i)


        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def EXPRESSION(self):
            return self.getToken(TikzParser.EXPRESSION, 0)

        def radius(self):
            return self.getTypedRuleContext(TikzParser.RadiusContext,0)


        def nodeProperties(self):
            return self.getTypedRuleContext(TikzParser.NodePropertiesContext,0)


        def label(self):
            return self.getTypedRuleContext(TikzParser.LabelContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_draw

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDraw" ):
                listener.enterDraw(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDraw" ):
                listener.exitDraw(self)




    def draw(self):

        localctx = TikzParser.DrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_draw)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(TikzParser.DRAW)
                self.state = 54
                self.edgeProperties()
                self.state = 55
                self.nodeList()
                self.state = 56
                self.match(TikzParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(TikzParser.DRAW)
                self.state = 59
                self.edgeProperties()
                self.state = 60
                self.coordinates()
                self.state = 61
                _la = self._input.LA(1)
                if not(_la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 62
                self.coordinates()
                self.state = 63
                self.match(TikzParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.match(TikzParser.DRAW)
                self.state = 66
                self.edgeProperties()
                self.state = 67
                self.coordinates()
                self.state = 68
                _la = self._input.LA(1)
                if not(_la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 69
                self.radius()
                self.state = 70
                self.match(TikzParser.SEMICOLON)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 72
                self.match(TikzParser.DRAW)
                self.state = 73
                self.edgeProperties()
                self.state = 74
                self.coordinates()
                self.state = 75
                _la = self._input.LA(1)
                if not(_la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 76
                self.nodeProperties()
                self.state = 77
                self.label()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RadiusContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PARANTHESES(self):
            return self.getToken(TikzParser.OPEN_PARANTHESES, 0)

        def CLOSE_PARANTHESES(self):
            return self.getToken(TikzParser.CLOSE_PARANTHESES, 0)

        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def EXPRESSION(self):
            return self.getToken(TikzParser.EXPRESSION, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_radius

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRadius" ):
                listener.enterRadius(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRadius" ):
                listener.exitRadius(self)




    def radius(self):

        localctx = TikzParser.RadiusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_radius)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(TikzParser.OPEN_PARANTHESES)
            self.state = 82
            _la = self._input.LA(1)
            if not(_la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 83
            self.match(TikzParser.CLOSE_PARANTHESES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def edgeNode(self):
            return self.getTypedRuleContext(TikzParser.EdgeNodeContext,0)


        def nodeList(self):
            return self.getTypedRuleContext(TikzParser.NodeListContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_nodeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeList" ):
                listener.enterNodeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeList" ):
                listener.exitNodeList(self)




    def nodeList(self):

        localctx = TikzParser.NodeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nodeList)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.edgeNode()
                self.state = 86
                self.match(TikzParser.T__0)
                self.state = 87
                self.nodeList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.edgeNode()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeNodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordinates(self):
            return self.getTypedRuleContext(TikzParser.CoordinatesContext,0)


        def OPEN_PARANTHESES(self):
            return self.getToken(TikzParser.OPEN_PARANTHESES, 0)

        def CLOSE_PARANTHESES(self):
            return self.getToken(TikzParser.CLOSE_PARANTHESES, 0)

        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def EXPRESSION(self):
            return self.getToken(TikzParser.EXPRESSION, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_edgeNode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeNode" ):
                listener.enterEdgeNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeNode" ):
                listener.exitEdgeNode(self)




    def edgeNode(self):

        localctx = TikzParser.EdgeNodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_edgeNode)
        self._la = 0 # Token type
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.coordinates()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(TikzParser.OPEN_PARANTHESES)
                self.state = 94
                _la = self._input.LA(1)
                if not(_la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 95
                self.match(TikzParser.CLOSE_PARANTHESES)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgePropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_edgeProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdgeProperties" ):
                listener.enterEdgeProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdgeProperties" ):
                listener.exitEdgeProperties(self)




    def edgeProperties(self):

        localctx = TikzParser.EdgePropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_edgeProperties)
        self._la = 0 # Token type
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(TikzParser.T__1)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE:
                    self.state = 99
                    self.properties()


                self.state = 102
                self.match(TikzParser.T__2)
                pass
            elif token in [TikzParser.OPEN_PARANTHESES]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(TikzParser.NODE, 0)

        def nodeProperties(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.NodePropertiesContext)
            else:
                return self.getTypedRuleContext(TikzParser.NodePropertiesContext,i)


        def nodeId(self):
            return self.getTypedRuleContext(TikzParser.NodeIdContext,0)


        def AT(self):
            return self.getToken(TikzParser.AT, 0)

        def coordinates(self):
            return self.getTypedRuleContext(TikzParser.CoordinatesContext,0)


        def label(self):
            return self.getTypedRuleContext(TikzParser.LabelContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode" ):
                listener.enterNode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode" ):
                listener.exitNode(self)




    def node(self):

        localctx = TikzParser.NodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_node)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(TikzParser.NODE)
            self.state = 107
            self.nodeProperties()
            self.state = 108
            self.nodeId()
            self.state = 109
            self.nodeProperties()
            self.state = 110
            self.match(TikzParser.AT)
            self.state = 111
            self.coordinates()
            self.state = 112
            self.nodeProperties()
            self.state = 113
            self.label()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeIdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_PARANTHESES(self):
            return self.getToken(TikzParser.OPEN_PARANTHESES, 0)

        def CLOSE_PARANTHESES(self):
            return self.getToken(TikzParser.CLOSE_PARANTHESES, 0)

        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def EXPRESSION(self):
            return self.getToken(TikzParser.EXPRESSION, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_nodeId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeId" ):
                listener.enterNodeId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeId" ):
                listener.exitNodeId(self)




    def nodeId(self):

        localctx = TikzParser.NodeIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nodeId)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.OPEN_PARANTHESES]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(TikzParser.OPEN_PARANTHESES)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE:
                    self.state = 116
                    _la = self._input.LA(1)
                    if not(_la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 119
                self.match(TikzParser.CLOSE_PARANTHESES)
                pass
            elif token in [TikzParser.T__1, TikzParser.AT]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllGlobalPropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def globalProperties(self):
            return self.getTypedRuleContext(TikzParser.GlobalPropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_allGlobalProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllGlobalProperties" ):
                listener.enterAllGlobalProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllGlobalProperties" ):
                listener.exitAllGlobalProperties(self)




    def allGlobalProperties(self):

        localctx = TikzParser.AllGlobalPropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_allGlobalProperties)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(TikzParser.T__1)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TikzParser.EVERY) | (1 << TikzParser.EXPRESSION) | (1 << TikzParser.VARIABLE))) != 0):
                    self.state = 124
                    self.globalProperties(0)


                self.state = 127
                self.match(TikzParser.T__2)
                pass
            elif token in [TikzParser.ENDTIKZPICTURE, TikzParser.NODE, TikzParser.DRAW]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalPropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVERY(self):
            return self.getToken(TikzParser.EVERY, 0)

        def EQUAL_TO(self):
            return self.getToken(TikzParser.EQUAL_TO, 0)

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def VARIABLE(self):
            return self.getToken(TikzParser.VARIABLE, 0)

        def EXPRESSION(self):
            return self.getToken(TikzParser.EXPRESSION, 0)

        def globalProperties(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.GlobalPropertiesContext)
            else:
                return self.getTypedRuleContext(TikzParser.GlobalPropertiesContext,i)


        def COMMA(self):
            return self.getToken(TikzParser.COMMA, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_globalProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalProperties" ):
                listener.enterGlobalProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalProperties" ):
                listener.exitGlobalProperties(self)



    def globalProperties(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TikzParser.GlobalPropertiesContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_globalProperties, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TikzParser.EVERY]:
                self.state = 132
                self.match(TikzParser.EVERY)
                self.state = 133
                _la = self._input.LA(1)
                if not(_la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 134
                self.match(TikzParser.T__3)
                self.state = 135
                self.match(TikzParser.T__4)
                self.state = 136
                self.match(TikzParser.EQUAL_TO)
                self.state = 137
                self.match(TikzParser.T__5)
                self.state = 138
                self.properties()
                self.state = 139
                self.match(TikzParser.T__6)
                pass
            elif token in [TikzParser.EXPRESSION, TikzParser.VARIABLE]:
                self.state = 141
                self.properties()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 149
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TikzParser.GlobalPropertiesContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_globalProperties)
                    self.state = 144
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 145
                    self.match(TikzParser.COMMA)
                    self.state = 146
                    self.globalProperties(4) 
                self.state = 151
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class NodePropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_nodeProperties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeProperties" ):
                listener.enterNodeProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeProperties" ):
                listener.exitNodeProperties(self)




    def nodeProperties(self):

        localctx = TikzParser.NodePropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_nodeProperties)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(TikzParser.T__1)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TikzParser.EXPRESSION or _la==TikzParser.VARIABLE:
                    self.state = 153
                    self.properties()


                self.state = 156
                self.match(TikzParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertiesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def individualProperty(self):
            return self.getTypedRuleContext(TikzParser.IndividualPropertyContext,0)


        def COMMA(self):
            return self.getToken(TikzParser.COMMA, 0)

        def properties(self):
            return self.getTypedRuleContext(TikzParser.PropertiesContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_properties

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperties" ):
                listener.enterProperties(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperties" ):
                listener.exitProperties(self)




    def properties(self):

        localctx = TikzParser.PropertiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_properties)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.individualProperty()
                self.state = 161
                self.match(TikzParser.COMMA)
                self.state = 162
                self.properties()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.individualProperty()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndividualPropertyContext(ParserRuleContext):
